--- a/packages/SystemUI/res/values/ancient_dimens.xml
+++ b/packages/SystemUI/res/values/ancient_dimens.xml
@@ -62,4 +62,8 @@
     <dimen name="status_bar_mobile_signal_with_type_width">22dp</dimen>
     <dimen name="status_bar_mobile_signal_width">16dp</dimen>
     <dimen name="status_bar_mobile_type_height">10dp</dimen>
+
+    <!-- Custom Carrier Label -->
+    <dimen name="status_bar_carrier_height">14dp</dimen>
+
 </resources>
