--- a/core/res/res/values/ancient_config.xml
+++ b/core/res/res/values/ancient_config.xml
@@ -140,4 +140,7 @@
     <!-- Class name of screen off fod handler -->
     <string name="config_fodScreenOffHandlerClass" translatable="false"></string>
 
+    <!-- Whether the device supports Smart Pixels -->
+    <bool name="config_enableSmartPixels">false</bool>
+
 </resources>
