--- a/packages/SystemUI/res/values/ancient_strings.xml
+++ b/packages/SystemUI/res/values/ancient_strings.xml
@@ -169,4 +169,8 @@
     <string name="quick_settings_network_adb_label">ADB over network</string>
     <string name="quick_settings_network_adb_toast">USB debugging is not enabled</string>
 
+    <!-- Smart Pixels QS Tile -->
+    <string name="quick_settings_smart_pixels">Smart Pixels</string>
+    <string name="quick_settings_smart_pixels_on_power_save">Auto-enabled Smart Pixels</string>
+
 </resources>
