Add button to AppErrorDialog to upload crash information to dogbin
Change-Id: I4cdbd92d1d366563838674cc9f49f3e15b65de56

--- a/core/res/res/values/ancient_symbols.xml
+++ b/core/res/res/values/ancient_symbols.xml
@@ -197,4 +197,8 @@
     <!-- Class name of screen off fod handler -->
     <java-symbol type="string" name="config_fodScreenOffHandlerClass" />
 
+    <!-- App error dialog -->
+    <java-symbol type="id" name="aerr_copy" />
+    <java-symbol type="string" name="url_copy_success" />
+    <java-symbol type="string" name="url_copy_failed" />
 </resources>
