--- a/packages/SystemUI/res/layout/status_bar.xml
+++ b/packages/SystemUI/res/layout/status_bar.xml
@@ -72,26 +72,22 @@
                     android:layout_height="match_parent"
                     android:layout="@layout/operator_name" />
 
-               <ImageView
-                   android:id="@+id/status_bar_logo"
-                   android:layout_width="@dimen/status_bar_icon_size"
-                   android:layout_height="@dimen/status_bar_icon_size"
-                   android:src="@drawable/status_bar_logo"
-                   android:scaleType="centerInside"
-                   android:layout_gravity="center_vertical"
-                   android:gravity="start|center_vertical"
-                   android:padding="2dp"
-                   android:visibility="gone" />
-
-                <com.android.systemui.ancient.carrierlabel.CarrierLabel
-                    android:id="@+id/statusbar_carrier_text"
+                <com.android.keyguard.AlphaOptimizedLinearLayout
+                    android:id="@+id/left_icon_area"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:gravity="start|center_vertical"
-                    android:paddingEnd="@dimen/status_bar_left_clock_end_padding"
-                    android:visibility="gone"
-                    android:singleLine="true"/>
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal" >
+
+                    <ImageView
+                        android:id="@+id/status_bar_logo"
+                        android:layout_width="@dimen/status_bar_icon_size"
+                        android:layout_height="@dimen/status_bar_icon_size"
+                        android:src="@drawable/status_bar_logo"
+                        android:scaleType="centerInside"
+                        android:layout_gravity="center_vertical"
+                        android:gravity="start|center_vertical"
+                        android:padding="2dp"
+                        android:visibility="gone" />
 
                 <com.android.systemui.statusbar.policy.Clock
                     android:id="@+id/clock"
@@ -104,6 +100,17 @@
                     android:paddingEnd="@dimen/status_bar_left_clock_end_padding"
                     android:gravity="center_vertical|start"
                 />
+
+                <com.android.systemui.ancient.carrierlabel.CarrierLabel
+                    android:id="@+id/statusbar_carrier_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:gravity="start|center_vertical"
+                    android:paddingEnd="@dimen/status_bar_left_clock_end_padding"
+                    android:visibility="gone"
+                    android:singleLine="true"/>
+                </com.android.keyguard.AlphaOptimizedLinearLayout>
 
                 <com.android.systemui.statusbar.AlphaOptimizedFrameLayout
                     android:id="@+id/notification_icon_area"
@@ -132,7 +139,8 @@
             android:clipChildren="false"
             android:gravity="center_horizontal|center_vertical"/>
 
-        <com.android.keyguard.AlphaOptimizedLinearLayout android:id="@+id/system_icon_area"
+        <com.android.keyguard.AlphaOptimizedLinearLayout 
+            android:id="@+id/system_icon_area"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="@integer/system_icon_area_weight"
