Add kill button to notification guts [1/2]
SDB:Pie Bringup

[SpiritCroc]
- Make it a setting
- Don't allow killing apps when device is locked
- Bring it to Oreo

Change-Id: Id2c2f3259ae2ff45ab28288375bc14148a0e9f1e
Signed-off-by: smokey18 <kmboplays@gmail.com>

--- a/packages/SystemUI/res/values/ancient_strings.xml
+++ b/packages/SystemUI/res/values/ancient_strings.xml
@@ -134,4 +134,11 @@
     <!-- Alerting notification header label -->
     <string name="notification_section_header_alerting">Alerting notifications</string>
 
+    <!-- Kill button in notification guts -->
+    <string name="force_stop_dlg_title">Force stop?</string>
+    <string name="force_stop_dlg_text">If you force stop an app, it may misbehave.</string>
+    <string name="dlg_ok">@android:string/ok</string>
+    <string name="dlg_cancel">@android:string/cancel</string>
+    <string name="guts_force_close_app">Close App</string>
+
 </resources>
