--- a/packages/SystemUI/res/values/ancient_dimens.xml
+++ b/packages/SystemUI/res/values/ancient_dimens.xml
@@ -83,4 +83,8 @@
     <!-- Custom margin for qsquick -->
     <dimen name="ancient_qsquick_margin">80dp</dimen>
 
+    <!-- The width/height of the charging indicator view on keyguard. -->
+    <dimen name="keyguard_charging_indication_height">48dp</dimen>
+    <dimen name="keyguard_charging_indication_width">24dp</dimen>
+
 </resources>
