--- a/packages/SystemUI/res/values/ancient_strings.xml
+++ b/packages/SystemUI/res/values/ancient_strings.xml
@@ -115,9 +115,11 @@
     <string name="keyguard_indication_dash_charging_time"><xliff:g id="percentage">%2$s</xliff:g> • Dash Charging (<xliff:g id="charging_time_left" example="4 hours and 2 minutes">%s</xliff:g> until full)</string>
     <string name="keyguard_plugged_in_dash_charging">Dash Charging</string>
 
-    <!-- Reboot/Recovery/PowerOff QS Tile -->
+    <!-- PowerOff/Reboot/Recovery/Bootloader/SystemUI QS Tile -->
+    <string name="quick_settings_poweroff_label">Power off</string>
     <string name="quick_settings_reboot_label">Reboot</string>
     <string name="quick_settings_reboot_recovery_label">Recovery</string>
-    <string name="quick_settings_poweroff_label">Power off</string>
+    <string name="quick_settings_reboot_bootloader_label">Bootloader</string>
+    <string name="quick_settings_reboot_ui_label">SystemUI</string>
 
 </resources>
