--- a/packages/SystemUI/res/values/colors.xml
+++ b/packages/SystemUI/res/values/colors.xml
@@ -223,6 +223,7 @@
     <color name="qs_tile_background_color_disabled">@color/volume_background_tint</color>
 
     <color name="recents_dismiss_all_background_color">@android:color/white</color>
+    <color name="recents_dismiss_all_background_color_ripple">#a8a8a8</color>
     <color name="recents_dismiss_all_icon_color">#8a000000</color>
 
 </resources>
