FODCircleView: Recognizing fingerprint animation
@TheSarcastic: Separate FODAnimation into it's own class

 Signed-off-by: 00day0 <therandomuser11@gmail.com>

Change-Id: I80bb291814bd518b4186ef26ed9e9283acc2797a

--- a/packages/SystemUI/res/values/ancient_dimens.xml
+++ b/packages/SystemUI/res/values/ancient_dimens.xml
@@ -66,4 +66,7 @@
     <!-- Custom Carrier Label -->
     <dimen name="status_bar_carrier_height">14dp</dimen>
 
+    <!-- Size of the FOD animation -->
+    <dimen name="fod_animation_size">280dp</dimen>
+
 </resources>
