--- a/packages/SystemUI/res/values/ancient_config.xml
+++ b/packages/SystemUI/res/values/ancient_config.xml
@@ -38,4 +38,7 @@
     <!-- Enable face auth only when swiping security view -->
     <bool name="config_faceAuthOnlyOnSecurityView">false</bool>
 
+    <!-- Whether to show biometric help only when failed -->
+    <bool name="config_biometricHelpShowOnlyWhenFailed">false</bool>
+
 </resources>
