SystemUI: Allow listening for face only on pin/pass view
Useful for devices with popup camera

Change-Id: Ifba770dd1681858844d5d0290cbf385bfa47f841

--- a/packages/SystemUI/res/values/ancient_config.xml
+++ b/packages/SystemUI/res/values/ancient_config.xml
@@ -34,4 +34,8 @@
 
     <!-- FPSInfoService Fps file path -->
     <string name="config_fpsInfoSysNode" translatable="false"></string>
+
+    <!-- Enable face auth only when swiping security view -->
+    <bool name="config_faceAuthOnlyOnSecurityView">false</bool>
+
 </resources>
