SystemUI: update to new style
Co-authored-by: kr15714n70 <kristiantoadiwibowo84@gmail.com>
Signed-off-by: Reza Adi Pangestu <rezaadipangestu5@gmail.com>

--- a/packages/SystemUI/res/values/ancient_dimens.xml
+++ b/packages/SystemUI/res/values/ancient_dimens.xml
@@ -62,4 +62,7 @@
     <dimen name="status_bar_mobile_signal_with_type_width">22dp</dimen>
     <dimen name="status_bar_mobile_signal_width">16dp</dimen>
     <dimen name="status_bar_mobile_type_height">10dp</dimen>
+
+    <!-- Qs custom margin -->
+    <dimen name="ancient_qsquick_margin">80.0dip</dimen>
 </resources>
