--- a/packages/SystemUI/res/layout/quick_qs_status_icons.xml
+++ b/packages/SystemUI/res/layout/quick_qs_status_icons.xml
@@ -1,13 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- Copyright (C) 2017 The Android Open Source Project
      Copyright (C) 2020 Ancient OS
-
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
      You may obtain a copy of the License at
-
           http://www.apache.org/licenses/LICENSE-2.0
-
      Unless required by applicable law or agreed to in writing, software
      distributed under the License is distributed on an "AS IS" BASIS,
      WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -56,53 +53,7 @@
 			android:paddingEnd="2.0dip" 
 			systemui:textAppearance="@style/TextAppearance.QS.Status" />
     </LinearLayout>
-    <LinearLayout 
-		android:gravity="bottom|center" 
-		android:layout_gravity="bottom|center" 
-		android:orientation="horizontal" 
-		android:layout_width="fill_parent" 
-		android:layout_height="wrap_content" 
-		android:layout_marginTop="10.0dip" 
-		android:layout_alignParentBottom="true">
-                <TextClock 
-			android:textAppearance="@style/TextAppearance.QS.Status" 
-			android:textSize="30.0dip" 
-			android:textStyle="bold" 
-			android:id="@+id/anci_clock3"
-			android:textColor="?android:colorAccent" 
-			android:gravity="bottom|center" 
-			android:layout_gravity="bottom|center" 
-			android:layout_width="wrap_content" 
-			android:layout_height="wrap_content" 
-			android:layout_alignParentBottom="true" 
-			android:format12Hour="hh" 
-			android:format24Hour="HH" />
-                        <TextClock 
-			android:textAppearance="@style/TextAppearance.QS.Status" 
-			android:textSize="10.0dip" 
-			android:textStyle="normal" 
-			android:id="@+id/anci_clock4"
-			android:gravity="bottom|center" 
-			android:layout_gravity="bottom|center" 
-			android:layout_width="wrap_content" 
-			android:layout_height="wrap_content" 
-			android:layout_marginLeft="2.0dip" 
-			android:layout_marginRight="2.0dip" 
-			android:layout_alignParentBottom="true" 
-			android:format12Hour=":" 
-			android:format24Hour=":" />
-                        <TextClock 
-			android:textAppearance="@style/TextAppearance.QS.Status" 
-			android:textSize="20.0dip" 
-			android:textStyle="normal" 
-			android:id="@+id/anci_clock5"
-			android:gravity="bottom|center" 
-			android:layout_gravity="bottom|center" 
-			android:layout_width="wrap_content" 
-			android:layout_height="wrap_content" 
-			android:layout_alignParentBottom="true" 
-			android:format12Hour="mm a" 
-			android:format24Hour="mm" />
-    </LinearLayout>
+    <include 
+       layout="@layout/ancientui_header_clock" />
 
 </LinearLayout>
