Implement R style notification section headers
Change-Id: I2b11416a240f48cdf9b8b0733f51231511f1dede
Signed-off-by: Reza Adi Pangestu <rezaadipangestu5@gmail.com>

--- a/packages/SystemUI/res/values/ancient_strings.xml
+++ b/packages/SystemUI/res/values/ancient_strings.xml
@@ -133,4 +133,7 @@
     <string name="quick_settings_music_play">Play</string>
     <string name="quick_settings_music_pause">Pause</string>
 
+    <!-- Alerting notification header label -->
+    <string name="notification_section_header_alerting">Alerting notifications</string>
+
 </resources>
