--- a/core/res/res/values/ancient_config.xml
+++ b/core/res/res/values/ancient_config.xml
@@ -130,4 +130,8 @@
          platform signatures, specifically for use on devices with a vendor partition. -->
     <string-array name="config_vendorPlatformSignatures">
     </string-array>
+    
+    <!-- Whether device has DASH support. -->
+    <bool name="config_hasDashCharger">false</bool>
+    
 </resources>
