--- a/core/res/res/values/ancient_symbols.xml
+++ b/core/res/res/values/ancient_symbols.xml
@@ -184,4 +184,8 @@
     <java-symbol type="color" name="gradient_end_dark" />
     <java-symbol type="color" name="gradient_start" />
     <java-symbol type="color" name="gradient_end" />
+    
+    <!-- Whether device has DASH support. -->
+    <java-symbol type="bool" name="config_hasDashCharger" />
+
 </resources>
