--- a/packages/SettingsLib/res/values/custom_strings.xml
+++ b/packages/SettingsLib/res/values/custom_strings.xml
@@ -21,5 +21,9 @@
 
     <!-- Description for the screen zoom level that makes interface elements smallest. [CHAR LIMIT=24] -->
     <string name="screen_zoom_summary_smallest">Smallest</string>
+    
+    <!-- Dash Charging -->
+    <string name="power_remaining_dash_charging_duration_only">Dash charging (<xliff:g id="time">%1$s</xliff:g> left until full)</string>	
+    <string name="battery_info_status_dash_charging">Dash charging</string>
 
 </resources>
