--- a/packages/SystemUI/res/drawable/rounded_ripple.xml
+++ b/packages/SystemUI/res/drawable/rounded_ripple.xml
@@ -14,16 +14,16 @@
      limitations under the License.
 -->
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
-        android:color="?android:attr/colorControlHighlight">
+        android:color="@color/notification_material_background_color">
     <item android:id="@android:id/mask">
         <shape xmlns:android="http://schemas.android.com/apk/res/android">
-            <solid android:color="#FFFFFFFF"/>
-            <corners android:radius="8dp"/>
+            <solid android:color="@color/notification_material_background_color"/>
+            <corners android:radius="?android:attr/dialogCornerRadius"/>
         </shape>
     </item>
     <item android:id="@android:id/background">
         <shape android:shape="rectangle">
-            <solid android:color="?android:attr/colorBackgroundFloating"/>
+            <solid android:color="@color/notification_material_background_color"/>
             <corners android:radius="?android:attr/dialogCornerRadius"/>
         </shape>
     </item>
