--- a/packages/SystemUI/res/layout/volume_dialog.xml
+++ b/packages/SystemUI/res/layout/volume_dialog.xml
@@ -88,8 +88,27 @@
                     <!-- volume rows added and removed here! :-) -->
             </LinearLayout>
         </LinearLayout>
-        <FrameLayout android:id="@id/settings_container" android:background="@drawable/rounded_bg_full" android:layout_width="@dimen/volume_dialog_ringer_size" android:layout_height="@dimen/volume_dialog_ringer_size" android:layout_marginTop="@dimen/volume_dialog_spacer">
-            <com.android.keyguard.AlphaOptimizedImageButton android:layout_gravity="center" android:id="@id/settings" android:background="@drawable/rounded_ripple" android:padding="@dimen/volume_dialog_ringer_icon_padding" android:layout_width="fill_parent" android:layout_height="fill_parent" android:src="@drawable/ic_arrow_back" android:scaleType="fitCenter" android:tint="@color/accent_tint_color_selector" android:soundEffectsEnabled="false" android:contentDescription="@string/accessibility_volume_settings" android:elevation="7.0dip" style="@style/VolumeButtons" />
+            <FrameLayout 
+           android:id="@id/settings_container" 
+           android:clipToPadding="false"
+           android:translationZ="@dimen/volume_dialog_elevation"
+           android:background="@drawable/rounded_bg_full"
+           android:layout_width="@dimen/volume_dialog_ringer_size" 
+           android:layout_height="@dimen/volume_dialog_ringer_size" 
+           android:layout_marginTop="@dimen/volume_dialog_spacer">
+            <com.android.keyguard.AlphaOptimizedImageButton 
+               android:layout_gravity="center" 
+               android:id="@id/settings" 
+               android:background="@drawable/rounded_ripple" 
+               android:padding="@dimen/volume_dialog_ringer_icon_padding" 
+               android:layout_width="fill_parent" 
+               android:layout_height="fill_parent" 
+               android:src="@drawable/ic_arrow_back" 
+               android:scaleType="fitCenter" 
+               android:tint="@color/accent_tint_color_selector" 
+               android:soundEffectsEnabled="false" 
+               android:contentDescription="@string/accessibility_volume_settings" 
+               style="@style/VolumeButtons" />
         </FrameLayout>
         <FrameLayout
             android:id="@+id/odi_captions"
