--- a/packages/SystemUI/res/values-night/colors.xml
+++ b/packages/SystemUI/res/values-night/colors.xml
@@ -25,13 +25,13 @@
     <color name="notification_legacy_background_color">@*android:color/notification_material_background_color</color>
 
     <!-- The color of the material notification background when dimmed -->
-    <color name="notification_material_background_dimmed_color">#aa000000</color>
+    <color name="notification_material_background_dimmed_color">@color/notification_material_background_color</color>
 
     <!-- The color of the dividing line between grouped notifications while . -->
-    <color name="notification_divider_color">#212121</color>
+    <color name="notification_divider_color">@color/notification_material_background_color</color>
 
     <!-- The background color of the notification shade -->
-    <color name="notification_shade_background_color">@color/GM2_grey_900</color>
+    <color name="notification_shade_background_color">@color/notification_material_background_color</color>
 
     <!-- The color of the gear shown behind a notification -->
     <color name="notification_gear_color">@color/GM2_grey_500</color>
@@ -60,16 +60,16 @@
     <color name="notification_channel_dialog_separator">@color/GM2_grey_700</color>
 
     <!-- The color of the background in the top part of QSCustomizer -->
-    <color name="qs_customize_background">@color/GM2_grey_900</color>
+    <color name="qs_customize_background">@color/notification_material_background_color</color>
 
     <!-- The color of the background in the bottom part of QSCustomizer -->
     <color name="qs_customize_decoration">@color/GM2_grey_800</color>
 
     <!-- The color of the background in the separated list of the Global Actions menu -->
-    <color name="global_actions_separated_background">@color/GM2_grey_900</color>
+    <color name="global_actions_separated_background">@color/notification_material_background_color</color>
 
     <!-- The color of the background in the grid of the Global Actions menu -->
-    <color name="global_actions_grid_background">@color/GM2_grey_800</color>
+    <color name="global_actions_grid_background">@color/notification_material_background_color</color>
 
     <!-- The color of the text in the Global Actions menu -->
     <color name="global_actions_text">@color/GM2_grey_200</color>
