--- a/packages/SystemUI/res/values/ancient_dimens.xml
+++ b/packages/SystemUI/res/values/ancient_dimens.xml
@@ -80,4 +80,7 @@
     <dimen name="opa_line_x_trans_ry">15dp</dimen>
     <dimen name="opa_line_y_translation">16dp</dimen>
 
+    <!-- Custom margin for qsquick -->
+    <dimen name="ancient_qsquick_margin">80dp</dimen>
+
 </resources>
