--- a/packages/SystemUI/res/layout/ancientui_expanded_decoration.xml
+++ b/packages/SystemUI/res/layout/ancientui_expanded_decoration.xml
@@ -12,23 +12,56 @@
      See the License for the specific language governing permissions and
      limitations under the License.
 -->
-<LinearLayout
-	xmlns:android="http://schemas.android.com/apk/res/android"
-	android:orientation="vertical"
-	android:id="@+id/ancient_expanded_decoration"
-	android:layout_width="fill_parent"
-	android:layout_height="wrap_content"
-	android:layout_marginStart="@dimen/qs_header_tile_margin_horizontal"
-	android:layout_marginEnd="@dimen/qs_header_tile_margin_horizontal"
-	android:layout_gravity="bottom">
-
-	<include
-		layout="@layout/ancientui_decoration_expanded_clock"/>
-
-	<include
-		layout="@layout/ancientui_decoration_expanded_date"/>
-
-	<include
-		layout="@layout/ancientui_decoration_bar"/>
-
+<LinearLayout 
+   android:layout_gravity="bottom" 
+   android:orientation="vertical" 
+   android:id="@+id/ancient_expanded_decoration" 
+   android:layout_width="fill_parent" 
+   android:layout_height="wrap_content" 
+   android:layout_marginStart="@dimen/qs_header_tile_margin_horizontal" 
+   android:layout_marginEnd="@dimen/qs_header_tile_margin_horizontal"
+   xmlns:android="http://schemas.android.com/apk/res/android">
+    <LinearLayout 
+       android:gravity="bottom|center" 
+       android:layout_gravity="bottom|center" 
+       android:orientation="vertical" 
+       android:layout_width="fill_parent" 
+       android:layout_height="wrap_content" 
+       android:layout_marginBottom="0.0dip" 
+       android:layout_alignParentBottom="true">
+        <RelativeLayout 
+	   android:gravity="bottom|center" 
+	   android:layout_gravity="bottom|center" 
+	   android:layout_width="fill_parent" 
+	   android:layout_height="wrap_content" 
+	   android:layout_marginBottom="-10.0dip" 
+	   android:layout_alignParentBottom="true" 
+	   android:layout_alignParentStart="true">
+            <LinearLayout 
+	       android:gravity="bottom|center" 
+	       android:layout_gravity="bottom|center" 
+	       android:orientation="horizontal" 
+	       android:layout_width="fill_parent" 
+	       android:layout_height="wrap_content" 
+	       android:layout_marginBottom="-10.0dip" 
+	       android:layout_alignParentBottom="true">
+                <include layout="@layout/ancientui_header_clockd" />
+            </LinearLayout>
+        </RelativeLayout>
+        <LinearLayout 
+	   android:layout_width="fill_parent" 
+	   android:layout_height="24.0dip" 
+	   android:layout_marginBottom="0.0dip" 
+	   android:layout_alignParentBottom="true">
+            <include layout="@layout/ancientui_header_dated" />
+        </LinearLayout>
+        <LinearLayout 
+	   android:orientation="horizontal" 
+	   android:layout_width="wrap_content" 
+	   android:layout_height="24.0dip" 
+	   android:layout_alignParentBottom="true" 
+	   android:layout_centerInParent="true">
+            <include layout="@layout/ancientui_decoration_bar" />
+        </LinearLayout>
+    </LinearLayout>
 </LinearLayout>
