--- a/packages/SystemUI/res/layout/quick_qs_status_icons.xml
+++ b/packages/SystemUI/res/layout/quick_qs_status_icons.xml
@@ -70,8 +70,7 @@
 		android:layout_width="fill_parent"
 		android:layout_height="wrap_content">
 
-		<include
-			layout="@layout/ancientui_quick_decoration"/>
+		<include layout="@layout/ancientui_quick_decoration"/>
 
 	</LinearLayout>
 
