--- a/packages/SystemUI/res/layout/status_bar_notification_section_header_contents.xml
+++ b/packages/SystemUI/res/layout/status_bar_notification_section_header_contents.xml
@@ -18,11 +18,12 @@
 <merge xmlns:android="http://schemas.android.com/apk/res/android" >
     <TextView
         android:id="@+id/header_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_weight="1"
         android:layout_marginStart="@dimen/notification_section_header_padding_left"
         android:gravity="start"
+        android:textStyle="bold"
         android:textAlignment="gravity"
         android:textSize="13sp"
         android:textColor="@color/notification_section_header_label_color"
