--- a/packages/SystemUI/res/values-ru/ancient_strings.xml
+++ b/packages/SystemUI/res/values-ru/ancient_strings.xml
@@ -22,7 +22,7 @@
      <!-- Advanced powermenu -->
     <string name="global_action_restart_system">Перезагрузить</string>
     <string name="global_action_restart_advanced">Расширенная перезагрузка</string>
-    <string name="global_action_restart_recovery">Восстановление</string>
+    <string name="global_action_restart_recovery">Режим восстановления</string>
     <string name="global_action_restart_bootloader">Загрузчик</string>
     <string name="global_action_restart_ui">SystemUI</string>
     <string name="global_action_restart_hot">Быстрая перезагрузка</string>
@@ -32,7 +32,7 @@
     <string name="global_action_reboot">Перезагрузить</string>
     <string name="global_action_reboot_more">Перезагрузить\u2026</string>
     <string name="global_action_reboot_sub">Система</string>
-    <string name="global_action_reboot_recovery">Восстановление</string>
+    <string name="global_action_reboot_recovery">Режим восстановления</string>
     <string name="global_action_reboot_bootloader">Загрузчик</string>
     <string name="global_action_dismissable_dialog_text">Расширенные настройки отключены.\nВы хотите перезагрузить?\u003f</string>
     <string name="global_action_dnaa">Не показывать снова</string>
@@ -51,25 +51,25 @@
     <string name="quick_settings_heads_up_label">Всплывающие уведомления</string>
     <string name="accessibility_quick_settings_heads_up_off">Всплывающие уведомления отключены.</string>
     <string name="accessibility_quick_settings_heads_up_on">Всплывающие уведомления включены.</string>
-    <string name="accessibility_quick_settings_heads_up_changed_off">Всплывающие уведомления были отключены.</string>
-    <string name="accessibility_quick_settings_heads_up_changed_on">Всплывающие уведомления были включены.</string>
+    <string name="accessibility_quick_settings_heads_up_changed_off">Всплывающие уведомления отключены.</string>
+    <string name="accessibility_quick_settings_heads_up_changed_on">Всплывающие уведомления включены.</string>
 
     <!-- LTE QS Tile -->
     <string name="qs_lte_label">LTE</string>
-    <string name="lte_on">LTE включен </string>
-    <string name="lte_off">LTE выключен</string>
+    <string name="lte_on">Включить LTE</string>
+    <string name="lte_off">Отключить LTE</string>
 
     <!-- Sync QS Tile -->
     <string name="quick_settings_sync_label">Синхронизация</string>
     <string name="accessibility_quick_settings_sync_off">Синхронизация отключена</string>
     <string name="accessibility_quick_settings_sync_on">Синхронизация включена</string>
-    <string name="accessibility_quick_settings_sync_changed_off">Синхронизация была отключена</string>
-    <string name="accessibility_quick_settings_sync_changed_on">Синхронизация была включена</string>
+    <string name="accessibility_quick_settings_sync_changed_off">Синхронизация отключена</string>
+    <string name="accessibility_quick_settings_sync_changed_on">Синхронизация включена</string>
 
     <!-- DataSwitch Tile -->
-    <string name="qs_data_switch_label">Переключить SIM-карту на другую</string>
-    <string name="qs_data_switch_changed_1">Интернет был переключен на SIM 1.</string>
-    <string name="qs_data_switch_changed_2">Интернет был переключен на SIM 2.</string>
+    <string name="qs_data_switch_label">Сменить оператора мобильных данных</string>
+    <string name="qs_data_switch_changed_1">Сменить оператора мобильных данных на SIM 1.</string>
+    <string name="qs_data_switch_changed_2">Сменить оператора мобильных данных на SIM 2.</string>
 
     <!-- Compass QS Tile -->
     <string name="quick_settings_compass_label">Компас</string>
@@ -77,8 +77,8 @@
     <string name="quick_settings_compass_init">Инициализация\u2026</string>
     <string name="accessibility_quick_settings_compass_off">Компас отключен</string>
     <string name="accessibility_quick_settings_compass_on">Компас включен</string>
-    <string name="accessibility_quick_settings_compass_changed_off">Компас был выключен</string>
-    <string name="accessibility_quick_settings_compass_changed_on">Компас был включен</string>
+    <string name="accessibility_quick_settings_compass_changed_off">Компас выключен</string>
+    <string name="accessibility_quick_settings_compass_changed_on">Компас включен</string>
     <string name="quick_settings_compass_N">N</string>
     <string name="quick_settings_compass_NE">NE</string>
     <string name="quick_settings_compass_E">E</string>
