--- a/packages/SystemUI/res/layout/qs_carrier.xml
+++ b/packages/SystemUI/res/layout/qs_carrier.xml
@@ -36,7 +36,7 @@
 
     <com.android.systemui.util.AutoMarqueeTextView
         android:id="@+id/qs_carrier_text"
-        android:layout_width="wrap_content"
+        android:layout_width="54dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:textAppearance="@style/TextAppearance.QS.Status"
